Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33997

Assertion `((WSREP_PROVIDER_EXISTS_ && this->variables.wsrep_on) && wsrep_emulate_bin_log) || mysql_bin_log.is_open()' failed in int THD::binlog_write_row(TABLE*, bool, const uchar*)

    XMLWordPrintable

Details

    Description

      --source include/galera_cluster.inc
      --source include/have_partition.inc
       
      SET SESSION wsrep_osu_method=RSU;
      SET autocommit=0;
      CREATE TABLE t (c INT) PARTITION BY KEY(c) PARTITIONS 2;
      INSERT INTO t VALUES (1);
      INSERT INTO t SELECT 1 ;
      

      Leads to

      10.6.18 a8a75ba2d0dd639b2b14337a6c4f495fcaaff7e4 (Debug)

      mysqld: /test/10.6_dbg/sql/sql_class.cc:7225: int THD::binlog_write_row(TABLE*, bool, const uchar*): Assertion `((WSREP_PROVIDER_EXISTS_ && this->variables.wsrep_on) && wsrep_emulate_bin_log) || mysql_bin_log.is_open()' failed.
      

      10.6.18 a8a75ba2d0dd639b2b14337a6c4f495fcaaff7e4 (Debug)

      Core was generated by `/test/GAL_MD170424-mariadb-10.6.18-linux-x86_64-dbg/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14633c476700 (LWP 748606))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000558510061e65 in my_write_core (sig=sig@entry=6) at /test/10.6_dbg/mysys/stacktrace.c:424
      #2  0x000055850f902b26 in handle_fatal_signal (sig=6) at /test/10.6_dbg/sql/signal_handler.cc:357
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x00001463762d2859 in __GI_abort () at abort.c:79
      #6  0x00001463762d2729 in __assert_fail_base (fmt=0x146376468588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x558510253f30 "((WSREP_PROVIDER_EXISTS_ && this->variables.wsrep_on) && wsrep_emulate_bin_log) || mysql_bin_log.is_open()", file=0x558510252808 "/test/10.6_dbg/sql/sql_class.cc", line=7225, function=<optimized out>) at assert.c:92
      #7  0x00001463762e3fd6 in __GI___assert_fail (assertion=assertion@entry=0x558510253f30 "((WSREP_PROVIDER_EXISTS_ && this->variables.wsrep_on) && wsrep_emulate_bin_log) || mysql_bin_log.is_open()", file=file@entry=0x558510252808 "/test/10.6_dbg/sql/sql_class.cc", line=line@entry=7225, function=function@entry=0x5585102540b8 "int THD::binlog_write_row(TABLE*, bool, const uchar*)") at assert.c:101
      #8  0x000055850f5e47f5 in THD::binlog_write_row (this=this@entry=0x146304000d48, table=table@entry=0x1463040317f8, is_trans=is_trans@entry=true, record=record@entry=0x146304022030 "\375\001") at /test/10.6_dbg/sql/log.h:323
      #9  0x000055850f91a3de in Write_rows_log_event::binlog_row_logging_function (thd=0x146304000d48, table=0x1463040317f8, is_transactional=<optimized out>, before_record=<optimized out>, after_record=0x146304022030 "\375\001") at /test/10.6_dbg/sql/log_event.h:5390
      #10 0x000055850f91459b in handler::binlog_log_row (this=this@entry=0x146304032930, table=0x1463040317f8, before_record=before_record@entry=0x0, after_record=after_record@entry=0x146304022030 "\375\001", log_func=log_func@entry=0x55850f91a3a7 <Write_rows_log_event::binlog_row_logging_function(THD*, TABLE*, bool, unsigned char const*, unsigned char const*)>) at /test/10.6_dbg/sql/handler.cc:7152
      #11 0x000055850f916342 in handler::ha_write_row (this=0x146304032930, buf=0x146304022030 "\375\001") at /test/10.6_dbg/sql/handler.cc:7731
      #12 0x000055850f5f8831 in write_record (thd=0x146304000d48, table=0x1463040317f8, info=info@entry=0x146304014768, sink=0x0) at /test/10.6_dbg/sql/sql_insert.cc:2187
      #13 0x000055850f5f8b7f in select_insert::send_data (this=0x146304014718, values=<optimized out>) at /test/10.6_dbg/sql/sql_insert.cc:4159
      #14 0x000055850f6b9b5d in select_result_sink::send_data_with_check (sent=0, u=<optimized out>, items=<optimized out>, this=<optimized out>) at /test/10.6_dbg/sql/sql_class.h:5888
      #15 JOIN::exec_inner (this=this@entry=0x1463040147d8) at /test/10.6_dbg/sql/sql_select.cc:4750
      #16 0x000055850f6baa59 in JOIN::exec (this=this@entry=0x1463040147d8) at /test/10.6_dbg/sql/sql_select.cc:4662
      #17 0x000055850f6b8aaa in mysql_select (thd=thd@entry=0x146304000d48, tables=0x0, fields=@0x146304013bf8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x146304013e88, last = 0x146304013e88, elements = 1}, <No data fields>}, conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2202245270016, result=0x146304014718, unit=0x146304004f18, select_lex=0x146304013940) at /test/10.6_dbg/sql/sql_select.cc:5141
      #18 0x000055850f6b921b in handle_select (thd=thd@entry=0x146304000d48, lex=lex@entry=0x146304004e50, result=result@entry=0x146304014718, setup_tables_done_option=setup_tables_done_option@entry=1073741824) at /test/10.6_dbg/sql/sql_select.cc:559
      #19 0x000055850f643e8e in mysql_execute_command (thd=thd@entry=0x146304000d48, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/10.6_dbg/sql/sql_parse.cc:4776
      #20 0x000055850f62f948 in mysql_parse (thd=thd@entry=0x146304000d48, rawbuf=rawbuf@entry=0x146304013160 "INSERT INTO t SELECT 1", length=length@entry=22, parser_state=parser_state@entry=0x14633c4752d0) at /test/10.6_dbg/sql/sql_parse.cc:8139
      #21 0x000055850f62f24e in wsrep_mysql_parse (thd=thd@entry=0x146304000d48, rawbuf=0x146304013160 "INSERT INTO t SELECT 1", length=22, parser_state=parser_state@entry=0x14633c4752d0) at /test/10.6_dbg/sql/sql_parse.cc:7950
      #22 0x000055850f63d2a9 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x146304000d48, packet=packet@entry=0x14630400adb9 "INSERT INTO t SELECT 1", packet_length=packet_length@entry=22, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_class.h:1417
      #23 0x000055850f63f903 in do_command (thd=0x146304000d48, blocking=blocking@entry=true) at /test/10.6_dbg/sql/sql_parse.cc:1409
      #24 0x000055850f78fce6 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x5585123dc5f8, put_in_cache=put_in_cache@entry=true) at /test/10.6_dbg/sql/sql_connect.cc:1415
      #25 0x000055850f7901b8 in handle_one_connection (arg=0x5585123dc5f8) at /test/10.6_dbg/sql/sql_connect.cc:1317
      #26 0x00001463767e3609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #27 0x00001463763cf133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.5.25 (dbg), 10.6.18 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.34 (dbg), 10.4.34 (opt), 10.5.25 (opt), 10.6.18 (opt), 10.11.8 (dbg), 10.11.8 (opt), 11.0.6 (dbg), 11.0.6 (opt), 11.1.5 (dbg), 11.1.5 (opt), 11.2.4 (dbg), 11.2.4 (opt), 11.3.3 (dbg), 11.3.3 (opt), 11.4.2 (dbg), 11.4.2 (opt), 11.5.0 (dbg), 11.5.0 (opt)

      Attachments

        1. MDEV-33997.result
          0.2 kB
          Julius Goryavsky
        2. MDEV-33997.test
          0.2 kB
          Julius Goryavsky

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.